src/components/BaseDialog.css
.dialog {
  position: absolute;
  inset:0;
  background: transparent;
  border: 0;

&::before {
  position: fixed;
  inset:0;
  background: rgb(0 0 0 / 50%);
  content: " ";
  z-index: 10;
}
}

.dialog-box {
  position: fixed;
  bottom: 0;
  right: 0;
  padding: 2rem;
  border: 1px solid #ccc;
  background-color: white;
  width: 100%;
  max-width: 23.4375rem;
  max-height: 80%;
  color: #000;
  display: flex;
  flex-direction: column;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  text-align: left;
  overflow-y: hidden;
  font-size: 1rem;
  z-index: 11;
}


.dialog-content {
  max-height: calc(80% - 2rem - 1.5rem - 2.625rem);
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: rgb(0 0 0 / 30%) transparent;
  padding-right: 0.25rem;

&::-webkit-scrollbar {
  width: 0.5rem;
}

&::-webkit-scrollbar-thumb {
  background-color: rgb(0 0 0 / 30%);
  border-radius: 0.25rem;
}

&::-webkit-scrollbar-track {
  background-color: transparent;
}

&::-webkit-scrollbar-button {
  display: none;
}
}

.dialog-header {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 2.625rem;

  & h2 {
    font-style: normal;
    font-weight: 500;
    font-size: 1.375rem;
    line-height: 1.875rem;
    letter-spacing: -0.032em;
    color: #000;
    margin: 0;
  }
}

.close-button {
  background: none;
  border: none;
  cursor: pointer;
  color: black;
  padding: 0.5rem 1rem;
  transition: all ease-in-out 0.2s;

  &:hover {
    scale: 1.3;
  }
}

@media (width >= 376px) {
  .dialog-box {
    left: calc(100% - 23.4375rem);
    top: 0;
    bottom: 0;
    max-height: 100%;
    border-top-right-radius: 0;
  }

  .dialog-content {
    max-height: calc(100% - 2rem - 1.5rem - 1.25rem);
  }
}

